# legal-edict-monitor

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  index.html  pyproject.toml  render.yaml  requirements.txt  skills-lock.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-frontend.yml
app/: __init__.py  auth.py  config.py  database.py  exceptions.py  main.py  middleware.py  redis_client.py
app/api/v1/: deps.py  router.py
app/api/v1/endpoints/: auth.py  clients.py  documents.py  health.py
app/models/: __init__.py  base.py  client.py  crawl_log.py  detected_edict.py  extracted_entity.py  law_firm.py  notification.py  raw_document.py  source_portal.py  user.py  watchlist_entry.py
app/services/: __init__.py  cache.py
app/services/ocr/: __init__.py  base.py  service.py
app/services/ocr/engines/: __init__.py  native.py  tesseract.py  textract.py
app/services/parser/: __init__.py  base.py  input_validation.py  patterns.py  service.py  validators.py
assets/: index-A10Ae7hK.css  index-BbWn-7bE.css  index-BjodLrhU.js  index-C4F2YkFZ.js  index-C4O9zEDW.css  index-CbI0SMBY.js  index-ClIEubUV.css  index-D-Q5KHpN.js  index-DAfM3NmU.js  index-DILCcVw6.css  index-DuHlZfD0.js  index-Dw6CS174.css  index-QZFzl4UB.js  index-bhFaKtZ9.js  query-Sp2g-ruM.js  react-vendor-LIp8bcwH.js
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  clients.ts  documents.ts  health.ts  watchlist.ts
frontend/src/components/layout/: AppShell.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/components/ui/: AliasInput.tsx  Card.tsx  ConfirmDialog.tsx  EmptyState.tsx  LoadingSpinner.tsx  MonoValue.tsx  Pagination.tsx  StatusBadge.tsx  Toast.tsx
frontend/src/hooks/: useClients.ts  useDocumentProcessing.ts  useSystemHealth.ts  useWatchlist.ts
frontend/src/pages/: NotFoundPage.tsx
frontend/src/pages/Clients/: ClientDetailPage.tsx  ClientListPage.tsx  CreateClientPage.tsx  EditClientPage.tsx
frontend/src/pages/Dashboard/: DashboardPage.tsx
frontend/src/types/: api.ts
frontend/src/utils/: formatters.ts
tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_new_features.py  test_parser.py
(+15 files in other folders)
